Fluent validation was applied for the book query.

--- a/fimple bootcamp week 1 homework.csproj
+++ b/fimple bootcamp week 1 homework.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\BookOperations\Commands\" />
+    <Folder Include="Application\BookOperations\Commands\CreateBook\" />
     <Folder Include="Entitys\" />
     <Folder Include="DBOperations\" />
     <Folder Include="build output\" />
