The classes in the controller have been moved to the DTOs folder.

--- a/fimple bootcamp week 1 homework.csproj
+++ b/fimple bootcamp week 1 homework.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Folder Include="DBOperations\" />
     <Folder Include="build output\" />
+    <Folder Include="DTOs\MemberDTO\" />
   </ItemGroup>
 
 </Project>
