--- a/fimple bootcamp week 1 homework.csproj
+++ b/fimple bootcamp week 1 homework.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\BookOperations\Commands\UpdateBookState\" />
     <Folder Include="DBOperations\" />
     <Folder Include="build output\" />
   </ItemGroup>
