Added the ability to add authors.

--- a/fimple bootcamp week 1 homework.csproj
+++ b/fimple bootcamp week 1 homework.csproj
@@ -20,7 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\AuthorOperations\Command\" />
+    <Folder Include="Application\AuthorOperations\Command\DeleteAuthor\" />
+    <Folder Include="Application\AuthorOperations\Command\UpdateAuthor\" />
     <Folder Include="DBOperations\" />
     <Folder Include="build output\" />
   </ItemGroup>
